--- a/syles.css
+++ b/syles.css
@@ -120,7 +120,7 @@ ul {
 }
 
 .skill-span-progress {
-    font-size: 14px;
+    font-size: 12px;
     text-decoration: overline;
 }
 
@@ -142,7 +142,8 @@ h5 {
 .nav-items {
     font-size: 1.2em;
     display: flex;
-    justify-content: space-between;
+    align-content: center;
+    gap: 8px;
     height: 50px;
     flex-wrap: wrap;
     align-items: center;
